--- a/styles.css
+++ b/styles.css
@@ -1,92 +1,145 @@
 @font-face {
-  font-family: "Input Mono";
-  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
-    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
+   font-family: 'Input Mono';
+   src: url('/fonts/OpenSans-Regular-webfont.woff2') format('woff2'),
+      url('/fonts/OpenSans-Regular-webfont.woff') format('woff');
+}
+
+@font-face {
+   font-family: 'Input Mono';
+   src: url('/fonts/OpenSans-Regular-webfont.woff2') format('woff2'),
+      url('/fonts/OpenSans-Regular-webfont.woff') format('woff');
+}
+
+@font-face {
+   src: url('fonts/InputMono-Black-Edu.woff2') format('woff2'),
+      url('fonts/InputMono-Black-Edu.woff') format('woff');
+   font-family: 'InputMono';
+   font-style: normal;
+   font-weight: 800;
+}
+
+@font-face {
+   src: url('fonts/InputMono-Regular-Edu.woff2') format('woff2'),
+      url('fonts/InputMono-Regular-Edu.woff') format('woff');
+   font-family: 'InputMono';
+   font-style: normal;
+   font-weight: normal;
 }
 
 html {
-  height: 100%;
+   height: 100%;
 }
 
 body {
-  height: 100%;
-  background-color: #161116;
+   height: 100%;
+   background-color: white;
 }
 
 .container {
-  display: grid;
-  grid-template-columns:
-    [first] 1fr
-    [line2] 1fr
-    [line3] 1fr
-    [line4] 1fr
-    [line5] 1fr
-    [line6] 1fr
-    [line7] 1fr
-    [line8] 1fr
-    [line9] 1fr
-    [line10] 1fr
-    [line11] 1fr
-    [line12] 1fr
-    [line13] 1fr
-    [end];
-  grid-gap: 20px;
-  grid-auto-rows: minmax(50px, auto);
-  font-family: "Space Mono", monospace;
-  font-size: 15px;
-  color: white;
-  background-color: #151215;
-  margin-bottom: 50px;
+   display: grid;
+   grid-template-columns:
+      [first] 1fr
+      [line2] 1fr
+      [line3] 1fr
+      [line4] 1fr
+      [line5] 1fr
+      [line6] 1fr
+      [line7] 1fr
+      [line8] 1fr
+      [line9] 1fr
+      [line10] 1fr
+      [line11] 1fr
+      [line12] 1fr
+      [line13] 1fr
+      [end];
+   grid-gap: 20px;
+   grid-auto-rows: minmax(50px, auto);
+   font-family: 'InputMono', 'Space Mono', monospace;
+   font-size: 24px;
+   line-height: 1.4;
+   font-style: normal;
+   font-weight: normal;
+   color: #151215;
+   background-color: white;
+   margin-bottom: 50px;
 }
 
 a {
-  cursor: pointer;
-  color: #c949e6;
-  text-decoration: none;
+   cursor: pointer;
+   color: #c949e6;
+   text-decoration: none;
 }
 
 .caption {
-  font-style: italic;
+   font-style: italic;
 }
 
 .img-padding {
-  padding: 20px 0;
+   padding: 20px 0;
 }
 
 header {
-  grid-column: line2 / span 2;
-  grid-row: 1;
+   grid-column: line2 / span 6;
+   grid-row: 1;
 }
 
 h1 {
-  font-family: "Space Mono", monospace;
-  font-size: 48px;
-  color: #c949e6;
+   font-family: 'InputMono', 'Space Mono', monospace;
+   font-weight: 800;
+   font-size: 120px;
+   line-height: 1.4;
+   color: #c949e6;
+   padding-bottom: 6rem;
+   /* text-transform: uppercase; */
+}
+
+h2 {
+  font-family: 'InputMono', 'Space Mono', monospace;
+   font-weight: 800;
+   font-size: 96px;
+   line-height: 1.4;
+   color: #c949e6;
+   padding-bottom: 4rem;
 }
 
 .text-width {
-  grid-column: line2 / 8;
+   grid-column: line4 / 10;
 }
 
-.intro {
-  grid-row: 2;
-  padding-bottom: 20px;
-}
-
-.map {
-  background: white;
-  grid-row: 3;
-  grid-column: line2 / 12;
-  padding-bottom: 20px;
-  width: 100%;
-}
-
-.map img {
-  width: inherit;
+.overview img {
+   width: inherit;
 }
 
 .video-iframe {
-  grid-column: line2 / 8;
+   grid-column: line2/ 13;
+   grid-row: 2;
+   position: relative;
+   padding-bottom: 6rem;
+}
+
+.intro {
+  grid-row: 3;
+  padding-bottom: 20px;
+}
+
+.examples {
   grid-row: 4;
-  position: relative;
+  grid-column: line2/ 13;
+}
+
+.examples h2 {
+  grid-column: line4/ 13;
+}
+
+div.feature {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 4rem;
+  justify-content: space-between;
+  padding: 8rem 0;
+}
+
+div.description {
+  max-width: 30vw;
+  padding: 0 3rem;
 }
