--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,124 @@
 @font-face {
-   font-family: 'Input Mono';
-   src: url('/fonts/OpenSans-Regular-webfont.woff2') format('woff2'),
-      url('/fonts/OpenSans-Regular-webfont.woff') format('woff');
+  font-family: "Input Mono";
+  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
+    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
 }
 
 @font-face {
-   font-family: 'Input Mono';
-   src: url('/fonts/OpenSans-Regular-webfont.woff2') format('woff2'),
-      url('/fonts/OpenSans-Regular-webfont.woff') format('woff');
+  font-family: "Input Mono";
+  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
+    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
 }
 
 @font-face {
-   src: url('fonts/InputMono-Black-Edu.woff2') format('woff2'),
-      url('fonts/InputMono-Black-Edu.woff') format('woff');
-   font-family: 'InputMono';
-   font-style: normal;
-   font-weight: 800;
+  src: url("fonts/InputMono-Black-Edu.woff2") format("woff2"),
+    url("fonts/InputMono-Black-Edu.woff") format("woff");
+  font-family: "InputMono";
+  font-style: normal;
+  font-weight: 800;
 }
 
 @font-face {
-   src: url('fonts/InputMono-Regular-Edu.woff2') format('woff2'),
-      url('fonts/InputMono-Regular-Edu.woff') format('woff');
-   font-family: 'InputMono';
-   font-style: normal;
-   font-weight: normal;
+  src: url("fonts/InputMono-Regular-Edu.woff2") format("woff2"),
+    url("fonts/InputMono-Regular-Edu.woff") format("woff");
+  font-family: "InputMono";
+  font-style: normal;
+  font-weight: normal;
 }
 
 html {
-   height: 100%;
+  height: 100%;
 }
 
 body {
-   height: 100%;
-   background-color: white;
+  height: 100%;
+  background-color: white;
 }
 
 .container {
-   display: grid;
-   grid-template-columns:
-      [first] 1fr
-      [line2] 1fr
-      [line3] 1fr
-      [line4] 1fr
-      [line5] 1fr
-      [line6] 1fr
-      [line7] 1fr
-      [line8] 1fr
-      [line9] 1fr
-      [line10] 1fr
-      [line11] 1fr
-      [line12] 1fr
-      [line13] 1fr
-      [end];
-   grid-gap: 20px;
-   grid-auto-rows: minmax(50px, auto);
-   font-family: 'InputMono', 'Space Mono', monospace;
-   font-size: 24px;
-   line-height: 1.4;
-   font-style: normal;
-   font-weight: normal;
-   color: #151215;
-   background-color: white;
-   margin-bottom: 50px;
+  display: grid;
+  grid-template-columns:
+    [first] 1fr
+    [line2] 1fr
+    [line3] 1fr
+    [line4] 1fr
+    [line5] 1fr
+    [line6] 1fr
+    [line7] 1fr
+    [line8] 1fr
+    [line9] 1fr
+    [line10] 1fr
+    [line11] 1fr
+    [line12] 1fr
+    [line13] 1fr
+    [end];
+  grid-gap: 20px;
+  grid-auto-rows: minmax(50px, auto);
+  font-family: "InputMono", "Space Mono", monospace;
+  font-size: 18px;
+  line-height: 1.4;
+  font-style: normal;
+  font-weight: normal;
+  color: #151215;
+  background-color: white;
+  margin-bottom: 50px;
 }
 
 a {
-   cursor: pointer;
-   color: #c949e6;
-   text-decoration: none;
+  cursor: pointer;
+  color: #c949e6;
+  text-decoration: none;
 }
 
 .caption {
-   font-style: italic;
+  font-style: italic;
 }
 
 .img-padding {
-   padding: 20px 0;
+  padding: 20px 0;
 }
 
 header {
-   grid-column: line2 / span 6;
-   grid-row: 1;
+  grid-column: line2 / span 6;
+  grid-row: 1;
 }
 
 h1 {
-   font-family: 'InputMono', 'Space Mono', monospace;
-   font-weight: 800;
-   font-size: 120px;
-   line-height: 1.4;
-   color: #c949e6;
-   padding-bottom: 6rem;
-   /* text-transform: uppercase; */
+  font-family: "InputMono", "Space Mono", monospace;
+  font-weight: 800;
+  font-size: 120px;
+  line-height: 1.4;
+  color: #c949e6;
+  padding-bottom: 6rem;
+  /* text-transform: uppercase; */
 }
 
 h2 {
-  font-family: 'InputMono', 'Space Mono', monospace;
-   font-weight: 800;
-   font-size: 96px;
-   line-height: 1.4;
-   color: #c949e6;
-   padding-bottom: 4rem;
+  font-family: "InputMono", "Space Mono", monospace;
+  font-weight: 800;
+  font-size: 96px;
+  line-height: 1.4;
+  color: #c949e6;
+  padding-bottom: 4rem;
+}
+
+h3 {
+  margin: 0;
 }
 
 .text-width {
-   grid-column: line4 / 10;
+  grid-column: line4 / 10;
 }
 
 .overview img {
-   width: inherit;
+  width: inherit;
 }
 
 .video-iframe {
-   grid-column: line2/ 13;
-   grid-row: 2;
-   position: relative;
-   padding-bottom: 6rem;
+  grid-column: line2/ 13;
+  grid-row: 2;
+  position: relative;
+  padding-bottom: 6rem;
 }
 
 .intro {
@@ -142,4 +146,8 @@ div.feature {
 div.description {
   max-width: 30vw;
   padding: 0 3rem;
+}
+
+div.description h3 {
+  margin: 0;
 }
