--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,8 @@ h1 {
 h2 {
   font-family: "InputMono", "Space Mono", monospace;
   font-weight: 800;
-  font-size: 96px;
+  font-size: 72px;
+  max-width: 65vw;
   line-height: 1.4;
   color: #c949e6;
   padding-bottom: 4rem;
@@ -104,6 +105,7 @@ h2 {
 
 h3 {
   margin: 0;
+  font-size: 36px;
 }
 
 .text-width {
@@ -133,6 +135,10 @@ h3 {
 
 .examples h2 {
   grid-column: line4/ 13;
+}
+
+div.video {
+  width: 100%;
 }
 
 div.feature {
